--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 @import "tailwindcss";
 
 
@@ -19,3 +20,10 @@
     border: 1px solid rgb(69, 65, 65);
     outline: none;
 } 
+* {
+    font-family: "Outfit", sans-serif;
+}
+
+::-webkit-scrollbar{
+    display: none;
+}
